35/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: nginx-demo-ingress-35
  name: nginx-demo-ingress-35
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx-demo-ingress-35
  template:
    metadata:
      labels:
        app: nginx-demo-ingress-35
    spec:
      containers:
        - name: nginx-demo-ingress-35
          image: wangyanglinux/myapp:v1
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-svc-35
spec:
  ports:
    - port: 8000
      targetPort: 80
      protocol: TCP
  selector:
    app: nginx-demo-ingress-35
---
